добавил тесты и сохранение инфы